jbigkit (2.1-3) UNRELEASED; urgency=low

  * Fix up typo in man page

 -- Michael van der Kolff <mvanderkolff@gmail.com>  Wed, 23 Jul 2014 19:41:11 +1000

jbigkit (2.1-2) unstable; urgency=medium

  * Don't override passed CFLAGS in Makefile (so it now hardens properly)
  * Use -Wall, remove -Wno-unused-result (papering over #680935)
  * Fix remaining unused result warnings (Thanks Colin) (Closes: #680935)
  * Add static library to dev package (Closes: #741379)

 -- Michael van der Kolff <mvanderkolff@gmail.com>  Wed, 23 Jul 2014 18:25:12 +1000

jbigkit (2.1-1) unstable; urgency=low

  * Bump Std-Vers to 3.9.5, no changes needed
  * Add symbols file (pulled from ubuntu diff) (Closes: #712240)
  * Remove explicit calls to `install -s`.
    Closes: #754344 (Thanks: Steve Langasek <steve.langasek@canonical.com>)
  * Update package priority (Closes: #755284)
  * Update watch location
  * Imported Upstream version 2.1

 -- Michael van der Kolff <mvanderkolff@gmail.com>  Sun, 20 Jul 2014 20:45:41 +1000

jbigkit (2.0-2.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Add CVE-2013-6369.patch patch.
    CVE-2013-6369: Fix stack-based buffer overflow flaw. (Closes: #743960)

 -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 20 Apr 2014 16:37:42 +0200

jbigkit (2.0-2) unstable; urgency=low

  * Correct typo in new Makefile, so that libjbig.so now points to a file
    that exists (Closes: #667927)
  * Readd test target per Mathieu Malaterre's comments
  * Make test target work by forcing it to search the directory where the
    library was built.

 -- Michael van der Kolff <mvanderkolff@gmail.com>  Sun, 08 Apr 2012 19:12:41 +1000

jbigkit (2.0-1) unstable; urgency=low

  * Initial release (Closes: #656413)

 -- Michael van der Kolff <mvanderkolff@gmail.com>  Fri, 06 Apr 2012 07:05:15 +1000