@@ -3,12 +3,15 @@ Author: Michael van der Kolff <mvanderkolff@gmail.com>
 Forwarded: no
 
 diff --git a/libjbig/Makefile b/libjbig/Makefile
-index f2898f5..8b1f446 100644
+index f2898f5..24b6de4 100644
 --- a/libjbig/Makefile
 +++ b/libjbig/Makefile
-@@ -6,29 +6,30 @@ CC = gcc
+@@ -4,31 +4,32 @@
+ CC = gcc
+ 
  # Options for the compiler: A high optimization level is suggested
- CFLAGS = -g -O -W -Wall -ansi -pedantic # --coverage
+-CFLAGS = -g -O -W -Wall -ansi -pedantic # --coverage
++CFLAGS ?= -g -O -W -Wall -ansi -pedantic # --coverage
  
 -all: libjbig.a libjbig85.a tstcodec tstcodec85
 +.PHONY: all clean test
@@ -55,7 +58,7 @@ index f2898f5..8b1f446 100644
  
  update-po: jbig.c jbig85.c Makefile
  	xgettext -ojbig.pot -k_ \
-@@ -50,6 +52,7 @@ t82test.pbm: tstcodec
+@@ -50,6 +51,7 @@ t82test.pbm: tstcodec
  	./tstcodec $@
  
  clean:
