@@ -1,6 +1,7 @@
 jbigkit (2.1-3) UNRELEASED; urgency=low
 
   * Fix up typo in man page
+  * Correct makefile so that test targets use correct CFLAGS, too
 
  -- Michael van der Kolff <mvanderkolff@gmail.com>  Wed, 23 Jul 2014 19:41:11 +1000
 
